--- a/mockup-recipe/index.html
+++ b/mockup-recipe/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>My Recipe Book</title>
 </head>
@@ -10,12 +11,16 @@
     <header>
     <h1>My Recipe Book</h1>
     </header>
+    <main>
     <div class="favorites">
         <h2>Favorites</h2>
         <ul>
             <li><a href="recipe.html">Spaghetti Carbonara</a></li>
         </ul>
     </div>
-    <footer>Made with ❤️ by Amy</footer>
+    </main>
+       
+    <footer>Made with ♥ by Rachel</footer>
+    
 </body>
 </html>
