Added the last missing img

--- a/mockup-recipe/recipe.html
+++ b/mockup-recipe/recipe.html
@@ -17,7 +17,7 @@
     <section class="hero">
     <h2>Spaghetti Carbonara</h2>
     <section class="hero-image">
-        <img src="/img/carbonara.jpg" alt="Spaghetti Carbonara">
+        <img src="/mockup-recipe/img/carbonara.jpg" alt="Spaghetti Carbonara">
     </section>
     </section>
 
